# rust-template-workspace

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: build.yml  cli.yml  lint.yml
example/: Cargo.toml
src/: main.rs
tests/: example.rs
